fix(웹뷰):visibility:hidden 방식을 사용하여 flexbox 정렬문제해결

--- a/index.css
+++ b/index.css
@@ -215,7 +215,7 @@ header {
 /* 상수 정의 */
 
 .hidden {
-  display: none;
+  visibility: hidden;
 }
 
 .shade {
